debian-policy (3.5.9.1) unstable; urgency=low
  Josip:
  * Fixed date, typos and added indentation in the virtual packages list,
    closes: #182792.
  Manoj
  * Clarify x-terminal-emulator virtual package eligibility, in an
    extention to an informative footnote.                    closes: Bug#165063

 -- 

debian-policy (3.5.9.0) unstable; urgency=low

  Josip:
  * Added missing bits of information about Description: fields from
    the old Packaging manual,                                   closes: #172022
  * Fixed a stale reference to the "base system maintainer" to
    base-passwd maintainer,                                     closes: #174927
  * Fixed an accidental change from /usr/share/package to /usr/share/doc in
    the paragraph about not depending on /usr/share/doc/package,
                                                                closes: #174048
  * Fixed several errors reported by Guenther Palfinger, with some help from
    Richard Braakman,       closes: #177205, #177206, #177207, #177208, #177209
  * Added versions to links and docbook-xml source-dependencies, hopefully
    fixes the bug with potato, and even if it doesn't, I don't care :)
                                                                closes: #103459
  * Fixed typos in the debconf spec noticed by Jay Bonci,       closes: #178455
  * Clarified that using Build-Depends for build-dependencies is not a "may"
    but a "should", added proper linking among various sections dealing with
    the dependencies so that there is no confusion,              closes: #87510
    If any one of those poor, misguided people ;) still thinks that the
    requirement should be a "must" (in _our_ meaning, not RFC "MUST"),
    please file a new bug, as it's quite unproductive to have to sift
    through a 152-page bug log which mostly goes back-and-forth with
    explanations how policy should work, occasionally sprinkled with
    offtopic stuff, too.