@@ -7116,7 +7116,7 @@ name ["<var>syshostname</var>"]:
 		    id="http://www.freedesktop.org/standards/wm-spec.html"
 		    name="The Window Manager Specification Project">,
                   written by the <url id="http://www.freedesktop.org"
-		    name="Free Desktop Group">, add 20 points.
+		    name="Free Desktop Group">, add 40 points.
                 </p>
               </item>
 
