@@ -7,9 +7,9 @@
     Created On       : Thu Oct 29 20:54:48 1998
     Created On Node  : tiamat.datasync.com
     Last Modified By : Manoj Srivastava
-    Last Modified On : Fri Mar  7 12:37:18 2003
+    Last Modified On : Fri Mar 21 10:26:20 2003
     Last Machine Used: glaurung.green-gryphon.com
-    Update Count     : 30
+    Update Count     : 31
     Status           : Unknown, Use with caution!
     HISTORY          :
     Description      :
@@ -53,6 +53,15 @@ picking your way through this list.
 <h2>The checklist</h2>
 
 <pre>
+?.?.?.?                    ??? 0?
+
+     - packages providing the x-terminal-emulator virtual package
+       ought to ensure that they interpret the command line exactly
+       like xterm does. [??.?]
+     - Window managers compliant with the Window Manager Specification
+       Project may add 40 points (for ranking in the alternatives) [??.?]
+
+
 3.5.9.0                    Mar 03
 
      - The section describing the Description: package field once again has
